--- a/config.yaml
+++ b/config.yaml
@@ -13,3 +13,16 @@ jwt:
 
 local:
   path: "upload/file"
+
+email:
+  username: "purepoison77@yeah.net"
+  password: "LLFDBKVLCLHULPJW"
+  host: "smtp.yeah.net"
+  port: "25"
+
+redis:
+  host: "localhost"
+  port: "6379"
+  user: ""
+  password: ""
+  db: "0"
